Added the link to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>My weather</title>
 </head>
 <body>
-  <h1> hello weather</h1>
+  <h1> hello weather!</h1>
+  <footer> Coded by 
+    <a href="https://github.com/Bmadz82/Weather-today">Belinda Madzhie</a>, hosted on 
+    <a href="https://bella-weather.netlify.app/"> on netlify</a>
+    </footer>
 </body>
 </html>
