--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
   <title>My weather</title>
 </head>
 <body>
-  <h1> hello weather!</h1>
-  <footer> Coded by 
+    <header>
+        <form>
+            <input type="search"placeholder="enter a city.."required/>
+            <input type="=Submit" value="search"/>
+        </form>
+    </header>
+    <main>
+  <h1> Johannesburg</h1>
+  <p>
+    Friday 13h00, Scattered Clouds
+    <br/>
+    Humidity :  66%, windy : 3.1km/h
+  </p>
+</d> 
+<div>🌤️ 12°C</div>
+  </main>
+    </main>
+  <footer>
+    This project is  Coded by 
     <a href="https://github.com/Bmadz82/Weather-today">Belinda Madzhie</a>, hosted on 
     <a href="https://bella-weather.netlify.app/"> on netlify</a>
     </footer>
