--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>bella-weather App</title>
   </head>
   <body>
@@ -45,7 +46,7 @@
 
       <footer>
         This project was coded by
-        <a href="https://github.com/Bmadz82/" target="_blank"> Matt Delac</a>,
+        <a href="https://github.com/Bmadz82/" target="_blank"> Bella</a>,
         is
         <a href="https://github.com/Bmadz82" target="_blank"
           >open-sourced on GitHub</a
